# Planning-and-Control-based-on-Carla-and-ROS2

./: README.md
initial_version/carla_ackermann_msgs/: CMakeLists.txt  package.xml
initial_version/carla_ackermann_msgs/msg/: EgoVehicleControlCurrent.msg  EgoVehicleControlInfo.msg  EgoVehicleControlTarget.msg
initial_version/carla_ad_agent/: package.xml  setup.py
initial_version/carla_ad_agent/launch/: carla_ad_agent.launch  carla_ad_agent.launch.py
initial_version/carla_ad_agent_cpp/: CMakeLists.txt  package.xml
initial_version/carla_ad_agent_cpp/include/: local_planner.h
initial_version/carla_ad_agent_cpp/launch/: local_planner_cpp_launch.py
initial_version/carla_ad_agent_cpp/src/: ad_agent.cpp
initial_version/carla_ad_demo/: package.xml
initial_version/carla_ad_demo/config/: FollowLeadingVehicle.xosc  carla_ad_demo.rviz
initial_version/carla_ad_demo/launch/: carla_ad_demo.launch  carla_ad_demo.launch.py  carla_ad_demo_with_scenario.launch  carla_ad_demo_with_scenario.launch.py
initial_version/carla_common/: CMakeLists.txt  package.xml  setup.cfg  setup.py
initial_version/carla_manual_control/: setup.cfg  setup.py
initial_version/carla_manual_control/launch/: carla_manual_control.launch
initial_version/carla_msgs/: CONTRIBUTING.md  LICENSE  README.md
initial_version/carla_msgs/msg/: CarlaActorList.msg  CarlaBoundingBox.msg  CarlaControl.msg  CarlaEgoVehicleControl.msg  CarlaEgoVehicleInfo.msg  CarlaEgoVehicleStatus.msg  CarlaStatus.msg  CarlaTrafficLightInfoList.msg  CarlaWalkerControl.msg
initial_version/carla_msgs/srv/: DestroyObject.srv  SpawnObject.srv
initial_version/carla_ros_bridge/launch/: carla_ros_bridge.launch  carla_ros_bridge.launch.py  carla_ros_bridge_with_example_ego_vehicle.launch.py
initial_version/carla_ros_bridge/test/: ros_bridge_client.py  ros_bridge_client_ros2_test.py
initial_version/carla_ros_scenario_runner/: README.md  package.xml  setup.py
initial_version/carla_ros_scenario_runner_types/msg/: CarlaScenario.msg
initial_version/carla_ros_scenario_runner_types/srv/: ExecuteScenario.srv
initial_version/carla_spawn_objects/: CMakeLists.txt  package.xml  setup.cfg  setup.py
initial_version/carla_spawn_objects/config/: objects.json
initial_version/carla_spawn_objects/launch/: carla_example_ego_vehicle.launch.py  carla_spawn_objects.launch.py  set_initial_pose.launch  set_initial_pose.launch.py
initial_version/carla_twist_to_control/: CMakeLists.txt  README.md  package.xml
initial_version/carla_twist_to_control/launch/: carla_twist_to_control.launch  carla_twist_to_control.launch.py
initial_version/carla_walker_agent/: CMakeLists.txt  package.xml  setup.cfg
initial_version/carla_walker_agent/launch/: carla_walker_agent.launch
initial_version/carla_waypoint_publisher/: setup.cfg  setup.py
initial_version/carla_waypoint_types/: CMakeLists.txt  package.xml
initial_version/carla_waypoint_types/srv/: GetWaypoint.srv
initial_version/my_planning_and_control/controller_modules/: CMakeLists.txt  package.xml
initial_version/my_planning_and_control/general_modules/: CMakeLists.txt  package.xml
initial_version/my_planning_and_control/main_function/: CMakeLists.txt  package.xml
initial_version/my_planning_and_control/main_function/include/: main_function.h
initial_version/my_planning_and_control/main_function/launch/: main_function_launch.py
initial_version/my_planning_and_control/main_function/src/: main_function.cpp
initial_version/my_planning_and_control/planner_modules/: CMakeLists.txt
initial_version/ros_compatibility/: CMakeLists.txt  package.xml  setup.cfg  setup.py
plus_version/carla_ackermann_msgs/msg/: EgoVehicleControlMaxima.msg  EgoVehicleControlStatus.msg
plus_version/carla_ad_agent/: CMakeLists.txt  README.md  setup.cfg
plus_version/carla_ad_agent/launch/: carla_ad_agent.launch.py
plus_version/carla_ad_agent_cpp/src/: local_planner_cpp.cpp
plus_version/carla_ad_demo/: CMakeLists.txt  README.md
plus_version/carla_ad_demo/config/: carla_ad_demo_ros2.rviz
plus_version/carla_manual_control/: CMakeLists.txt  README.md  package.xml
plus_version/carla_manual_control/launch/: carla_manual_control.launch.py
plus_version/carla_msgs/: CMakeLists.txt  package.xml
plus_version/carla_msgs/msg/: CarlaActorInfo.msg  CarlaCollisionEvent.msg  CarlaEgoVehicleInfoWheel.msg  CarlaLaneInvasionEvent.msg  CarlaTrafficLightInfo.msg  CarlaTrafficLightStatus.msg  CarlaTrafficLightStatusList.msg  CarlaWeatherParameters.msg  CarlaWorldInfo.msg
plus_version/carla_msgs/srv/: GetBlueprints.srv
plus_version/carla_ros_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
plus_version/carla_ros_bridge/launch/: carla_ros_bridge_with_example_ego_vehicle.launch
plus_version/carla_ros_bridge/test/: ros_bridge_client.test  settings.yaml  test_objects.json
plus_version/carla_ros_scenario_runner/: CMakeLists.txt  setup.cfg
plus_version/carla_ros_scenario_runner/launch/: carla_ros_scenario_runner.launch  carla_ros_scenario_runner.launch.py
plus_version/carla_ros_scenario_runner_types/: CMakeLists.txt  package.xml
plus_version/carla_ros_scenario_runner_types/msg/: CarlaScenarioList.msg  CarlaScenarioRunnerStatus.msg
plus_version/carla_spawn_objects/: README.md
plus_version/carla_spawn_objects/config/: objects copy.json  objects.json
plus_version/carla_twist_to_control/: setup.cfg  setup.py
plus_version/carla_walker_agent/: README.md  setup.py
plus_version/carla_waypoint_publisher/: CMakeLists.txt  README.md  package.xml
plus_version/my_planning_and_control/main_function/: CMakeLists.txt  package.xml
plus_version/my_planning_and_control/main_function/include/: control_agent.h  planning_agent.h
plus_version/my_planning_and_control/main_function/launch/: my_pnc_launch.py
plus_version/my_planning_and_control/main_function/src/: control_agent.cpp  planning_agent.cpp
plus_version/pnc_msgs/: CMakeLists.txt  package.xml
plus_version/pnc_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg
plus_version/ros_compatibility/: README.md
(+97 files in other folders)
