<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pnc_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2024544288@qq.com">zhanghao_20_04</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--添加自定义消息-->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!--添加自定义消息-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
